FEM/blog-preview-card/style.css
body {
    display: grid;
    place-items: center;
    min-height: 98vh;
    grid-template-rows: 95vh;
    font-family: Figtree, Geneva, Tahoma, sans-serif;
    font-size: 0.86rem;
    line-height: 1.3rem;
    background-color: hsl(47, 88%, 63%);
}


main {
    box-sizing: border-box;
    background-color: white;
    border: 1px solid black;
    box-shadow: 8px 8px;
    padding: 1.4rem;
    width: 330px;
    height: 500px;
    border-radius: 1.3rem;
    transition: box-shadow 0.18s ease-in;

    img {
        display: block;
        object-fit: cover;
        width: 280px;
        height: 200px;
        border-radius: 0.7rem;
        margin-bottom: 1.7rem;
    }

    p {
        font-size: 0.8rem;
        font-weight: 600;
        margin-top: 0.9rem;
    }
}

    main:hover {
        box-shadow: 13px 13px;
        transition: box-shadow 0.18s ease-in;
    }


a {
    text-decoration: none;
}


a:visited {
    color: black;
}


mark {
    background-color: hsl(47, 88%, 63%);
    border-radius: 0.3rem;
    padding: 0.35rem 0.8rem;
    font-size: 0.8rem;
    font-weight: 800;
}


article {
    h2 {
        position: relative;
        margin-top: 1rem;
        font-weight: 800;
        text-decoration: none;
    }

    h2:hover {
        color: hsl(47, 88%, 63%);
    }

    h2::before {
        content: "";
        position: absolute;
        display: block;
        width: 84%;
        height: 2px;
        bottom: 0;
        left: 0;
        background-color: hsl(47, 88%, 63%);
        transform: scaleX(0);
        transition: transform 0.5s ease;
    }

    h2:hover::before {
        transform: scaleX(1);
    }

    p {
        color: hsl(0, 0%, 50%);
        font-size: 0.9rem;
        font-weight: 500;
    }
}


footer {
    margin-top: 1.4rem;

    img {
        display: inline;
        border-radius: 50%;
        width: 32px;
        height: 32px;
        margin: 0;
        vertical-align: sub;
    }

    p {
        font-size: 0.938rem;
        font-weight: 800;
        display: inline;
        vertical-align: super;
        margin-left: 0.5rem;
    }
}


.attribution {
    display: absolute;
    bottom: 1%;

    a {
        position: relative;
        color: rgb(0, 0, 0);
        text-decoration: none;
        font-weight: 600;
    }

    a:hover {
        color: #000000;
    }

    a::before {
        content: "";
        position: absolute;
        display: block;
        width: 100%;
        height: 1px;
        bottom: 0;
        left: 0;
        background-color: #000000;
        transform: scaleX(0);
        transition: transform 0.3s ease;
    }

    a:hover::before {
        transform: scaleX(1);
    }
}


@media (min-width: 1440px) {
    main {
        font-size: 1rem;
        line-height: 1.4rem;
        width: 380px;
        height: 525px;

        .graphic {
            width: 100%;
        }

        p,
        mark {
            font-size: 0.9rem;
            margin-bottom: 1.4rem;
        }

        article p {
            font-size: 1rem;
        }

        footer {
            margin-top: 1.6rem;
        }
    }
}

